--- a/src/SGDS_Web/Views/Shared/_Layout.cshtml
+++ b/src/SGDS_Web/Views/Shared/_Layout.cshtml
@@ -3,20 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SGDS_Web</title>
+    <title>@ViewData["Title"] - SGDS</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SGDS_Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
-    <style>
-        
-
-    </style>
-    <style>
-        
-    </style>
 </head>
 <body>
     <div class="sidebar">
@@ -33,7 +25,7 @@
     </div>
 
     <div class="top-navbar">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SGDS_Web</a>
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SGDS</a>
         <div class="auth-links">
             <partial name="_LoginPartial" />
         </div>
@@ -46,7 +38,7 @@
     </div>
 
     <footer class="text-muted text-center">
-        &copy; 2025 - SGDS_Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2025 SGDS — Tous droits réservés.
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
