--- a/src/SGDS_Web/Views/Home/Index.cshtml
+++ b/src/SGDS_Web/Views/Home/Index.cshtml
@@ -217,21 +217,24 @@
         <div class="carousel-inner">
             <!-- Remplace par tes récentes activités -->
             <div class="carousel-item active">
-                <img src="/images/activites/collecte-1.jpg" alt="Collecte mobile - Centre Ville">
+                @* <img src="/images/activites/collecte-1.jpg" alt="Collecte mobile - Centre Ville"> *@
+                <img src="/images/activites/collage-creatif-de-la-journee-mondiale-du-donneur-de-sang.jpg" alt="Collecte mobile - Centre Ville">
                 <div class="carousel-caption">
                     <h5 class="mb-1">Collecte mobile — Centre Ville</h5>
                     <p class="mb-0">120 donneurs mobilisés ce week-end.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/activites/sensibilisation-ecole.jpg" alt="Sensibilisation au don en milieu scolaire">
+                @* <img src="/images/activites/sensibilisation-ecole.jpg" alt="Sensibilisation au don en milieu scolaire"> *@
+                <img src="/images/activites/medecin-d-aide-humanitaire-en-afrique-prenant-soin-d-un-patient.jpg" alt="Sensibilisation au don en milieu scolaire">
                 <div class="carousel-caption">
                     <h5 class="mb-1">Sensibilisation — Lycée National</h5>
                     <p class="mb-0">Ateliers & inscriptions de nouveaux donneurs.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/images/activites/formation-staff.jpg" alt="Formation des partenaires">
+                @* <img src="/images/activites/formation-staff.jpg" alt="Formation des partenaires"> *@
+                <img src="/images/activites/vue-laterale-professionnel-de-la-sante-prelevant-du-sang.jpg" alt="Formation des partenaires">
                 <div class="carousel-caption">
                     <h5 class="mb-1">Formation des partenaires</h5>
                     <p class="mb-0">Renforcement de capacités pour un meilleur accueil.</p>
@@ -339,10 +342,10 @@
         <div class="partners-viewport appear" style="transition-delay:.06s">
             <div class="partners-track">
                 <!-- Set A -->
-                <img class="partners-logo" src="/images/partners/partner1.png" alt="Partenaire 1">
-                <img class="partners-logo" src="/images/partners/partner2.png" alt="Partenaire 2">
-                <img class="partners-logo" src="/images/partners/partner3.png" alt="Partenaire 3">
-                <img class="partners-logo" src="/images/partners/partner4.png" alt="Partenaire 4">
+                <img class="partners-logo" src="~/images/partners/croixrouge.jpg" alt="croixrouge">
+                <img class="partners-logo" src="~/images/partners/mspp.png" alt="mspp">
+
+                @* <img class="partners-logo" src="/images/partners/partner4.png" alt="Partenaire 4">
                 <img class="partners-logo" src="/images/partners/partner5.png" alt="Partenaire 5">
                 <img class="partners-logo" src="/images/partners/partner6.png" alt="Partenaire 6">
                 <!-- Set B duplicate -->
@@ -351,7 +354,7 @@
                 <img class="partners-logo" src="/images/partners/partner3.png" alt="Partenaire 3 (copie)">
                 <img class="partners-logo" src="/images/partners/partner4.png" alt="Partenaire 4 (copie)">
                 <img class="partners-logo" src="/images/partners/partner5.png" alt="Partenaire 5 (copie)">
-                <img class="partners-logo" src="/images/partners/partner6.png" alt="Partenaire 6 (copie)">
+                <img class="partners-logo" src="/images/partners/partner6.png" alt="Partenaire 6 (copie)"> *@
             </div>
         </div>
     </div>
