--- a/src/SGDS_Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/SGDS_Web/Views/Shared/_LoginPartial.cshtml
@@ -9,12 +9,12 @@
         <span class="text-dark">Hello @User.Identity?.Name!</span>
 
         <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
-            <button type="submit" class="btn btn-link p-0 text-dark logout-link">Logout</button>
+            <button type="submit" class="btn btn-link p-0 text-dark logout-link">Déconnexion</button>
         </form>
     }
     else
     {
-        <a class="text-dark auth-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
-        <a class="text-dark auth-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        @* <a class="text-dark auth-link" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a> *@
+        <a class="text-dark auth-link" asp-area="Identity" asp-page="/Account/Login">Se connecter</a>
     }
 </div>
