Add Policies Configure Authentication Cookie

--- a/src/SGDS_Web/Views/Shared/_HomeLayout.cshtml
+++ b/src/SGDS_Web/Views/Shared/_HomeLayout.cshtml
@@ -189,7 +189,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(Context.Request.Path.Value?.Contains("/Home/Services") == true ? "active" : "")"
-                               asp-area="" asp-controller="Services" asp-action="Index">Services</a>
+                               asp-area="" >Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(Context.Request.Path.Value?.Contains("/Contact") == true ? "active" : "")"
