--- a/src/SGDS_Web/Views/Shared/_Layout.cshtml
+++ b/src/SGDS_Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,9 @@
     </div>
 
     <div class="top-navbar">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SGDS</a>
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+            <i class="fa-solid fa-droplet"></i> SGDS
+        </a>
         <div class="auth-links">
             <partial name="_LoginPartial" />
         </div>
